# quant-feature-store

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: backtest.py  macro_revisions.py  strategy_rsi_meanrev.py  stress.py
qfs/: __init__.py  backtest.py  corporate_actions.py  data.py  registry.py  store.py  universe.py
qfs/features/: __init__.py  market.py  ta.py
tests/: test_audit.py  test_backtest_leakage.py  test_corporate_actions.py  test_new_features.py  test_point_in_time.py  test_universe.py  test_versioning.py
