[project]
name = "qfs"
version = "0.1.0"
description = "Bitemporal feature store for trading signals — point-in-time correctness, feature versioning, leakage prevention."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "polars>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=15.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qfs"]
